--- a/package.json
+++ b/package.json
@@ -9,6 +9,26 @@
     "start": "webpack-dashboard -- webpack-dev-server",
     "test": "jest"
   },
+  "jest": {
+    "setupFiles": [
+      "<rootDir>/setupShim.js",
+      "<rootDir>/setupTest.js"
+    ],
+    "moduleNameMapper": {
+      "\\.css$": "identity-obj-proxy"
+    },
+    "collectCoverageFrom": [
+      "src/components/**/*.js"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 50,
+        "functions": 50,
+        "lines": 50,
+        "statements": 50
+      }
+    }
+  },
   "dependencies": {
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
@@ -18,12 +38,18 @@
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.7",
+    "enzyme": "^3.1.0",
+    "enzyme-adapter-react-16": "^1.0.2",
+    "enzyme-to-json": "^3.2.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "html-webpack-plugin": "^2.30.1",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^21.2.1",
     "normalize.css": "^7.0.0",
+    "react-test-renderer": "^16.0.0",
     "standard": "^10.0.3",
     "standard-loader": "^6.0.1",
     "style-loader": "^0.19.0",
