--- a/frontend/app/app.json
+++ b/frontend/app/app.json
@@ -2,9 +2,9 @@
   "expo": {
     "name": "iO control",
     "description": "App to home control",
-    "slug": "io-control",
+    "slug": "iocontrol",
     "privacy": "public",
-    "sdkVersion": "22.0.0",
+    "sdkVersion": "24.0.0",
     "version": "1.0.0",
     "orientation": "portrait",
     "primaryColor": "#cccccc",
