--- a/frontend/app/package.json
+++ b/frontend/app/package.json
@@ -14,12 +14,12 @@
     "apollo-client": "^1.9.3",
     "axios": "^0.17.0",
     "date-fns": "^1.29.0",
-    "expo": "^22.0.0",
+    "expo": "^24.0.0",
     "native-navigation": "^0.2.1",
     "prop-types": "^15.6.0",
-    "react": "16.0.0-beta.5",
+    "react": "16.0.0",
     "react-apollo": "^1.4.16",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-22.0.1.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-24.0.0.tar.gz",
     "react-native-icon-badge": "^1.1.3",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
